# genai-pyspark-pipeline

./: LICENSE  README.md  benchmark_formats.py  main.py  pyproject.toml  requirements.txt  run.bat  run.py  run_analytics.py  run_benchmark.py  spark_config_quick.py
data/raw/: customers.parquet  orders.parquet  products.parquet
src/: __init__.py  config.py  data_generator.py  pipeline.py  spark_analytics.py  spark_config.py
tests/: __init__.py  test_pipeline.py
