[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-pyspark-pipeline"
version = "0.1.0"
description = "Synthetic data generation and PySpark Analytics with AI-assisted development"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyspark>=3.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "faker>=20.0.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"